--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -56,6 +56,7 @@ spec:
                 memory: 2Gi
     service:
       main:
+        controller: main
         ports:
           http:
             port: 8989
@@ -70,9 +71,11 @@ spec:
           - host: &host "sonarr.${SECRET_DOMAIN}"
             paths:
               - path: /
+                pathType: Prefix
                 service:
                   name: main
-                  port: http
+
+                  port: 8989
         tls:
           - hosts: [*host]
     persistence:
@@ -84,4 +87,6 @@ spec:
         type: nfs
         server: 10.0.40.250
         path: /docker-media
-        mountPath: /media
+
+        globalMounts:
+          - path: /media
