--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -24,42 +24,66 @@ spec:
       retries: 3
   values:
     controllers:
-      main:
+      sonarr:
+        annotations:
+          reloader.stakater.com/auto: "true"
+        pod:
+          securityContext:
+            runAsUser: 2000
+            runAsGroup: 2000
+            runAsNonRoot: true
+            fsGroup: 2000
+            fsGroupChangePolicy: "OnRootMismatch"
         containers:
           app:
             image:
-              repository: ghcr.io/onedr0p/sonarr
-              tag: rolling
+              repository: ghcr.io/onedr0p/sonarr-develop
+              tag: 4.0.11.2774@sha256:8e74046f469162edf724160c1c1e26b4defcdd1479fb05cc109313069c85ecf5
               pullPolicy: IfNotPresent
             env:
+              COMPlus_EnableDiagnostics: "0"
+              SONARR__APP__INSTANCENAME: Sonarr
+              # SONARR__AUTH__APIKEY:
+              #   valueFrom:
+              #     secretKeyRef:
+              #       name: sonarr-secret
+              #       key: api_key
+              # SONARR__AUTH__METHOD: External
+              # SONARR__AUTH__REQUIRED: DisabledForLocalAddresses
+              SONARR__LOG__LEVEL: info
+              SONARR__SERVER__PORT: &port 8989
+              SONARR__UPDATE__BRANCH: develop
               TZ: ${TIMEZONE}
             probes:
-              liveness: &probes
+              liveness:
                 enabled: true
-                custom: true
-                spec:
-                  httpGet:
-                    path: /ping
-                    port: &port 8989
-                  initialDelaySeconds: 0
-                  periodSeconds: 10
-                  timeoutSeconds: 1
-                  failureThreshold: 3
-              readiness: *probes
+              readiness:
+                enabled: true
               startup:
-                enabled: false
+                enabled: true
+                spec:
+                  failureThreshold: 30
+                  periodSeconds: 5
             resources:
               requests:
-                cpu: 10m
-                memory: 250Mi
+                cpu: 20m
+                memory: 384Mi
               limits:
                 memory: 2Gi
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities:
+                drop:
+                  - ALL
+
     service:
-      main:
-        controller: main
+      app:
+        controller: sonarr
         ports:
           http:
-            port: 8989
+            port: *port
+
     ingress:
       main:
         enabled: true
@@ -73,20 +97,23 @@ spec:
               - path: /
                 pathType: Prefix
                 service:
-                  name: main
-
-                  port: 8989
+                  identifier: app
+                  port: http
         tls:
           - hosts: [*host]
+
     persistence:
       config:
         enabled: true
         existingClaim: sonarr-config
+      add-ons:
+        type: emptyDir
+      tmp:
+        type: emptyDir
       media:
         enabled: true
         type: nfs
         server: 10.0.40.250
         path: /docker-media
-
         globalMounts:
           - path: /media
