--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -43,6 +43,7 @@ spec:
             env:
               COMPlus_EnableDiagnostics: "0"
               SONARR__APP__INSTANCENAME: Sonarr
+              ##TODO: create secret for api key
               # SONARR__AUTH__APIKEY:
               #   valueFrom:
               #     secretKeyRef:
