--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -44,13 +44,9 @@ spec:
               COMPlus_EnableDiagnostics: "0"
               SONARR__APP__INSTANCENAME: Sonarr
               ##TODO: create secret for api key
-              # SONARR__AUTH__APIKEY:
-              #   valueFrom:
-              #     secretKeyRef:
-              #       name: sonarr-secret
-              #       key: api_key
-              # SONARR__AUTH__METHOD: External
-              # SONARR__AUTH__REQUIRED: DisabledForLocalAddresses
+              SONARR__AUTH__APIKEY: "${SECRET_SONARR_APIKEY}"
+              SONARR__AUTH__METHOD: External
+              SONARR__AUTH__REQUIRED: DisabledForLocalAddresses
               SONARR__LOG__LEVEL: info
               SONARR__SERVER__PORT: &port 8989
               SONARR__UPDATE__BRANCH: develop
