--- a/kubernetes/apps/media/nzbget/app/helmrelease.yaml
+++ b/kubernetes/apps/media/nzbget/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: sonarr
+  name: nzbget
   namespace: media
 spec:
   interval: 30m
@@ -24,7 +24,7 @@ spec:
       retries: 3
   values:
     controllers:
-      sonarr:
+      nzbget:
         annotations:
           reloader.stakater.com/auto: "true"
         pod:
@@ -39,23 +39,13 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/onedr0p/sonarr-develop
-              tag: 4.0.11.2774@sha256:8e74046f469162edf724160c1c1e26b4defcdd1479fb05cc109313069c85ecf5
+              repository: ghcr.io/k8s-at-home/nzbget-testing
+              tag: v21.2-r2333
               pullPolicy: IfNotPresent
             env:
-              COMPlus_EnableDiagnostics: "0"
-              SONARR__APP__INSTANCENAME: Sonarr
-              ##TODO: create secret for api key
-              # SONARR__AUTH__APIKEY: "${SECRET_SONARR_APIKEY}"
-              #   valueFrom:
-              #     secretKeyRef:
-              #       name: sonarr-secret
-              #       key: api_key
-              # SONARR__AUTH__METHOD: External
-              # SONARR__AUTH__REQUIRED: DisabledForLocalAddresses
-              SONARR__LOG__LEVEL: info
-              SONARR__SERVER__PORT: &port 8989
-              SONARR__UPDATE__BRANCH: develop
+              NZBGET_LOG_TARGET: stdout
+              NZBGET_OUTPUTMODE: log
+              NZBGET_PORT: &port 6789
               TZ: ${TIMEZONE}
             probes:
               liveness:
@@ -69,10 +59,10 @@ spec:
                   periodSeconds: 5
             resources:
               requests:
-                cpu: 20m
-                memory: 384Mi
+                cpu: 10m
+                memory: 256Mi
               limits:
-                memory: 2Gi
+                memory: 1Gi
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
@@ -80,7 +70,7 @@ spec:
 
     service:
       app:
-        controller: sonarr
+        controller: nzbget
         ports:
           http:
             port: *port
@@ -91,9 +81,9 @@ spec:
         className: external
         annotations:
           external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
-          hajimari.io/icon: mdi:television-classic
+          hajimari.io/icon: mdi:download
         hosts:
-          - host: &host "sonarr.${SECRET_DOMAIN}"
+          - host: &host "nzbget.${SECRET_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
@@ -106,16 +96,14 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: sonarr-config
+        existingClaim: nzbget-config
         globalMounts:
           - path: /config
-      add-ons:
-        type: emptyDir
       tmp:
         type: emptyDir
-      media:
+      downloads:
         type: nfs
         server: 10.0.40.250
-        path: /docker-media
+        path: /docker-media/downloads
         globalMounts:
-          - path: /media
+          - path: /downloads
