update sops secret

--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -7,7 +7,8 @@ stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:BlwfPkOavFueElLikL6/+g==,iv:mgGkDLv7Qt/SMS8AhH2Nh2lkDMUqUdFRsUCR/WRiyL0=,tag:oGuDRWzvV6VfcitEellqVg==,type:str]
     SECRET_ACME_EMAIL: ENC[AES256_GCM,data:2GUP+ciovGY05aaP2f2SdYJM+r+U,iv:lslkdrOThQgjjG2Pns+AkF1hEO5BuXAHZ/85yrioHB8=,tag:Gv6PDCZl89duzaQiMXEBJg==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:1FMJHOY4BNCyK6YmrTgvgE/LGVb9x1HV8mwiERFJ71O/gz9z,iv:K5cqg/pIt3+c5eN2OsMd9UGmb9bHYW7/JAMrFR99Pbc=,tag:fFN+Dy1KW5FpbLeRP1OOXg==,type:str]
-    SECRET_SONARR_APIKEY: ENC[AES256_GCM,data:cyegd0I0TcYVmhVCBKRT1UQ8jD9ICfpaWI69Nppbazo=,iv:xJw/j1iAFcAO5xHNgciD9CydL+hgjmiAW0MuGQP/dR4=,tag:zBU0ng85VIs0N+45nkoK1Q==,type:str]
+    SECRET_NZBGET_USER: ENC[AES256_GCM,data:EqPwHU7YONmPpw+G7w==,iv:BhUZ6/36ucby9cP6jNEHBiqXLy2Z359lDogU1S7kLRA=,tag:siHtxbHQHyb3rNPD7f5c9w==,type:str]
+    SECRET_NZBGET_PASSWORD: ENC[AES256_GCM,data:V/2lHGp8kK5i7EuFkYaMpDafsBIBn7n6mw==,iv:DmhK/Jtmmplq+fUY75QL3D9Orrj5+3sPphT8PN0M8/Y=,tag:YNFy9S4siuef3pU+47pAig==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +24,8 @@ sops:
             S21nNE8wcFJtNG9QWUtoYm82NERRb2cKhborrlU2XccYc2ul00mAjdwwM3jP10d9
             dvClK0QFY6+tYMjH5qTpTMel0Bo57wr4H5Ns/xnxA+JvIyKp3kAyXA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-18T07:54:04Z"
-    mac: ENC[AES256_GCM,data:vpcKz4cjNHG3ZxkKyJdc3/Qbkg6bLsWAxRkJoH6EXwjBsQm/Oas9o2BskoWCnv9/Pwa97XQ+KQTNy8iXQIyVlZS6ZwKQOj6Fi6v0SEB1E7vHZH/rAo6y+gc84fSF9+PRPUrDwq/s0uSECQ8dZrWM6UUcDqtnkrpVfsYzejlS7qE=,iv:Zr0vMrNRoWwTuVoeo3rtHoOgY3FFe/5nhAoWSg1LA3o=,tag:ufvj1awWcWvaEWE9dsFkdQ==,type:str]
+    lastmodified: "2024-12-19T19:52:22Z"
+    mac: ENC[AES256_GCM,data:zdULc9uZfIHOBKibNve8kuW4fHxB3YDiWzHHIjFnK3Ql2EfaZb6IH1HJMgHl5xbco7zXjyPFActH0G0v1sSsHYr33wPP93ETgqnOwRN/CdbgwG7LQJaj6ZVUrJWfKCqTIUw3G01DsyjXYLLKkl5cqb03IJk9JplkH3Z1yTj+uuw=,iv:bhBu/cnnAHXSZgWe05XihS6RnLh8X6dILuBr1aKEJQ8=,tag:WnP+rqbGYQMOGjFXMaszPg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
