fix: :fire: re-enable media services

--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -115,7 +115,7 @@ spec:
         type: emptyDir
       media:
         type: nfs
-        server: 10.0.40.250
-        path: /docker-media
+        server: 10.0.40.240
+        path: /media
         globalMounts:
           - path: /media
