--- a/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyfin/app/helmrelease.yaml
@@ -119,7 +119,7 @@ spec:
           - path: /cache
       media:
         type: nfs
-        server: 10.0.40.250
-        path: /docker-media
+        server: 10.0.40.240
+        path: /media
         globalMounts:
           - path: /media
