--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  # - ./jellyfin/ks.yaml
-  # - ./sonarr/ks.yaml
+  - ./jellyfin/ks.yaml
+  - ./sonarr/ks.yaml
   # - ./nzbget/ks.yaml
 
