--- a/kubernetes/apps/media/nzbhydra2/app/pvc.yaml
+++ b/kubernetes/apps/media/nzbhydra2/app/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nzbget-config
+  name: nzbhydra2-config
   namespace: media
   annotations:
     helm.sh/resource-policy: keep
@@ -10,7 +10,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: config-nfs
+  storageClassName: openebs-hostpath
   resources:
     requests:
       storage: 1Gi
