add ingress class

--- a/kubernetes/apps/media/nzbhydra2/app/helmrelease.yaml
+++ b/kubernetes/apps/media/nzbhydra2/app/helmrelease.yaml
@@ -63,6 +63,7 @@ spec:
       # @default -- See values.yaml
       main:
         enabled: true
+        className: external
         annotations:
           external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
           hajimari.io/icon: mdi:download
