--- a/kubernetes/apps/media/nzbhydra2/app/helmrelease.yaml
+++ b/kubernetes/apps/media/nzbhydra2/app/helmrelease.yaml
@@ -69,7 +69,7 @@ spec:
           hajimari.io/icon: mdi:download
         hosts:
           - # -- Host address. Helm template can be passed.
-            host: "nzbhyrda2.${SECRET_DOMAIN}"
+            host: &host "nzbhyrda2.${SECRET_DOMAIN}"
             ## Configure the paths for the host
             paths:
               - # -- Path.  Helm template can be passed.
@@ -81,7 +81,8 @@ spec:
                   name:
                   # -- Overrides the service port reference for this path
                   port:
-
+        tls:
+          - hosts: [*host]
     # -- Configure persistence settings for the chart under this key.
     # @default -- See values.yaml
     probes:
